WikimediaUI theme: Fix icon+label padding in process dialog on mobile too
Follow-up to 2c0fca9e4fb176616877641db84a9cadeaf22168. There was a
more specific selector overriding the styles, so copy them here.

Bug: T226780

--- a/src/themes/wikimediaui/windows.less
+++ b/src/themes/wikimediaui/windows.less
@@ -289,8 +289,16 @@
 				padding-left: @size-dialog-bar--mobile;
 			}
 
-			&.oo-ui-labelElement > .oo-ui-buttonElement-button {
-				padding: @padding-vertical-tool-label @padding-horizontal-base;
+			&.oo-ui-labelElement {
+				> .oo-ui-buttonElement-button {
+					padding: @padding-vertical-tool-label @padding-horizontal-base;
+				}
+
+				&.oo-ui-iconElement {
+					> .oo-ui-buttonElement-button {
+						padding-left: @padding-start-input-text-icon-label;
+					}
+				}
 			}
 		}
 	}
